tests/custom_discriminant/fail/function_call_discriminant.rs
use enum_macros::custom_discriminant;

#[custom_discriminant(u8)]
enum Foo {
    Bar = f(),
    Baz = f(),
}

const fn f() -> u8 {
    0
}

fn main() {}
