tests/custom_discriminant/fail/function_call_discriminant.stderr
error[E0532]: expected tuple struct or tuple variant, found function `f`
 --> tests/custom_discriminant/fail/function_call_discriminant.rs:5:11
  |
5 |     Bar = f(),
  |           ^ not a tuple struct or tuple variant

error[E0532]: expected tuple struct or tuple variant, found function `f`
 --> tests/custom_discriminant/fail/function_call_discriminant.rs:6:11
  |
6 |     Baz = f(),
  |           ^ not a tuple struct or tuple variant
